--- a/config/haproxy.cfg
+++ b/config/haproxy.cfg
@@ -1,7 +1,5 @@
 global
-    maxconn                         4096
-    user                            haproxy
-    group                           haproxy    
+    maxconn                         4096    
     tune.ssl.default-dh-param       4096
     log                             {{SYSLOG_IP}}:5514 local0
 
@@ -20,7 +18,6 @@ defaults
     log-format          %T\ %ID\ %ci:%cp\ %ft\ %Tq/%Tw/%Tc/%Tr/%Tt\ %ST\ %B\ %ac/%fc/%bc/%sc/%rc\ %hr\ %hs\ %{+Q}r
     errorfile           503       /usr/local/etc/haproxy/503-error.http
 
-
 frontend http
     mode                http
     bind                *:8080
@@ -29,14 +26,15 @@ frontend http
     redirect            scheme https code 301 if !{ ssl_fc }
     default_backend     varnish    
 
-frontend https
+frontend https    
     bind                *:8443 ssl crt /tokaido/ssl/default.pem alpn h2,http/1.1
     reqadd              X-Forwarded-Proto:\ https
     option              http-server-close
-    option              httpclose
+    option              httpclose    
     log                 global
     default_backend     varnish
 
-backend varnish
-    redirect            scheme https if !{ ssl_fc }
+backend varnish    
+    http-request        set-header X-Client-IP %[req.hdr_ip(x-forwarded-for,1)]
+    redirect            scheme https if !{ ssl_fc }        
     server              varnish {{VARNISH_HOSTNAME}}:8081 
